<resources>
    <string name="app_name" translatable="false">Smoke Signals</string>
    <string name="please_connect">Welcome! \n Please connect to use our services.</string>
    <string name="ask_username">Your username</string>
    <string name="ask_password">Your password</string>
    <string name="login">Log in</string>
    <string name="no_account">No account yet?</string>
    <string name="register">Sign in</string>
    <string name="no_username">Please enter a username.</string>
    <string name="no_password">Please enter a password.</string>
    <string name="no_location">Please turn on your GPS.</string>
    <string name="missing_permission">Missing permission!</string>
    <string name="api" translatable="false">https://192.168.1.59:45456/api/</string>
    <string name="access_denied">Access denied.</string>
    <string name="access_granted">Access granted!</string>
    <string name="error">Something went wrong... please try again.</string>
    <string name="gender_M">Male</string>
    <string name="gender_F">Female</string>
    <string name="gender_U">Unspecified</string>
    <string name="welcome_message">"Welcome, "</string>
    <string name="sign_out">Sign out</string>
    <string name="bad_identifiers">Invalid identifiers, \n please retry.</string>
    <string name="ask_conf_password">Confirm your password</string>
    <string name="ask_gender">Your gender :</string>
    <string name="ask_fields">Please fill in the following fields :</string>
    <string name="ask_city">Your city</string>
    <string name="select_a_city">Select a city</string>
    <string name="cancel">Cancel</string>
    <string name="no_city_found">No city found.</string>
    <string name="missing_fields">Please complete all fields.</string>
    <string name="password_mismatch">The passwords don\'t match.</string>
    <string name="your_chats">Your chats :</string>
    <string name="no_chat">No chat found.</string>
    <string name="messages" translatable="false">Messages</string>
    <string name="you">You</string>
    <string name="and">" and "</string>
    <string name="send_message">Send message</string>
    <string name="actualize">Actualize</string>
    <string name="add_chat">Add a chat</string>
    <string name="subject">The subject of this chat</string>
    <string name="users_to_add">Select the users you want to have this chat with.</string>
    <string name="add_the_chat">Add the chat</string>
    <string name="no_user_found">No user were found.</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="no_subject">Please specify the subject to this chat.</string>
    <string name="username_taken">This username is already taken. Please choose another one.</string>
</resources>
