<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_fields"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="15dp"
            android:background="@color/darkBeige"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:hint="@string/ask_username"
            android:inputType="text"/>
        <EditText
            android:id="@+id/password"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/ask_password"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/conf_password"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/ask_conf_password"
            android:inputType="textPassword"/>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_gender"
                android:textSize="19sp"
                android:padding="5sp"
                android:gravity=""/>
            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rd_gender_M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_M"/>
                <RadioButton
                    android:id="@+id/rd_gender_F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_F"/>
                <RadioButton
                    android:id="@+id/rd_gender_U"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_U"
                    android:checked="true" />
            </RadioGroup>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/city"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/ask_city"
                android:maxWidth="150dp"
                android:maxHeight="70dp"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/select_a_city"
                android:onClick="selectCity"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:onClick="register"/>
    </LinearLayout>
</ScrollView>