<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewChatActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_fields"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="15dp"
            android:background="@color/darkBeige"/>
        <EditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:hint="@string/subject"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:textSize="20sp"
            android:background="@color/lightGray"
            android:gravity="center"
            android:text="@string/users_to_add"/>
        <TextView
            android:id="@+id/tv_no_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_user_found"
            android:gravity="center"
            android:visibility="gone"
            android:background="@color/female"/>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="280dp">
            <LinearLayout
                android:id="@+id/li_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5sp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/female"
                android:text="@string/cancel"
                android:padding="5sp"
                android:onClick="cancel"/>
            <Button
                android:id="@+id/btn_addChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@color/other"
                android:text="@string/add_the_chat"
                android:padding="5sp"
                android:onClick="addChat"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>